Opti HomePage & Fix z-indexs

--- a/style/main.css
+++ b/style/main.css
@@ -156,7 +156,6 @@
 
   #select{
     color: #03AFA8;
-    border-bottom: solid;
   }
 
 
@@ -367,7 +366,7 @@
 
   #LastActu3-3{
     width: 300px;
-    height: 380px;
+    height: 385px;
     background-color: white;
     border-radius: 5px;
     position: absolute;
@@ -403,14 +402,13 @@
   #ActuMore{
     grid-row: 12;
     grid-column: 6 / 8;
-    transform: translate(-35px, 50px);
     text-align: center;
     transition: 0.2s ease-in-out;
     z-index: 3;
   }
 
   .ActuMore{
-    position: relative;
+    transform: translate(-9.75vw, 50px);
   }
 
 
@@ -514,7 +512,7 @@
   #desc {
     grid-column: 4 / 10;
     grid-row: 5 / 10;
-    z-index: 15;
+    z-index: 3;
     position: relative;
   }
 
@@ -573,6 +571,7 @@
   .HexagonGroupProject3 {
     grid-column: 2 / 5;
     grid-row: 13 / 16;
+    z-index: 3
   }
 
   .HexagonGroupProject3 h4 {
@@ -593,6 +592,7 @@
   .HexagonGroupProject4 {
     grid-column: 6 / 9;
     grid-row: 16 / 19;
+    z-index: 3;
   }
 
   .HexagonGroupProject4 h4 {
@@ -615,6 +615,7 @@
   .HexagonGroupProject5 {
     grid-column: 10 / 13;
     grid-row: 14 / 17;
+    z-index: 3;
   }
 
   .HexagonGroupProject5 h4 {
@@ -652,7 +653,8 @@
 
   .HexagonGroupProject6 {
     grid-column: 2 / 4;
-    grid-row: 22; 
+    grid-row: 22;
+    z-index: 3;
   }
 
   #Marlene {
@@ -686,7 +688,8 @@
 
   .HexagonGroupProject7 {
     grid-column: 10 /12;
-    grid-row: 25; 
+    grid-row: 25;
+    z-index: 3;
   }
 
   #Jerome {
@@ -723,7 +726,8 @@
 
   .HexagonGroupProject8 {
     grid-column: 2 / 4;
-    grid-row: 28; 
+    grid-row: 28;
+    z-index: 3;
   }
 
   #JeanChristophe {
@@ -1033,38 +1037,12 @@
 
 /*EN IMAGE*/
 
-  #MailleCategories1{
-    grid-column: 1 / 13;
-    grid-row: 3 / 12;
-    background-image: url('Assets/Maille2.png');
-    background-repeat: no-repeat;
-    background-size: auto 85%;
-    opacity: 0.3;
-    transform: rotate(-5deg) scaleX(1) translate(35px, -65px);
-    position: relative;
-    z-index: 10;
-  }
-
-  #MailleCategories2{
-    grid-column: 1 / 13;
-    grid-row: 14 / 22;
-    background-image: url('Assets/Maille2.png');
-    background-repeat: no-repeat;
-    background-size: auto 105%;
-    opacity: 0.3;
-    transform: translate(-250px 0px);
-    position: relative;
-    z-index: 10;
-    float: left;
-    transform: rotate(165deg) translateX(45px);
-  }
-
-   #Categorie1, #Categorie3, #Categorie5{
+  #Categorie1, #Categorie3, #Categorie5{
     width: 38vw;
     height: 10vh;
     border-radius: 3px;
     position: absolute;
-    z-index: 15;
+    z-index: 3;
     left: 10vw;
     border-radius: 10px;
   }
@@ -1073,7 +1051,7 @@
     width: 38vw;
     height: 10vh;
     position: absolute;
-    z-index: 15;
+    z-index: 3;
     right: 10vw;
     border-radius: 10px;
   }
@@ -1097,7 +1075,7 @@
     grid-column: 2 / 12;
     grid-row: 4;
     display: block;
-    z-index: 15;
+    z-index: 3;
   }
 
   /*--> Liste 2*/
@@ -1106,6 +1084,7 @@
      grid-column: 2 / 12;
      grid-row: 7;
      display: block;
+     z-index: 3;
    }
 
 
@@ -1115,6 +1094,7 @@
      grid-column: 2 / 12;
      grid-row: 10;
      display: block;
+     z-index: 3;
    }
 
 
@@ -1574,7 +1554,7 @@
     opacity: 0.3;
     transform: scaleX(1) translate(0px, -65px);
     position: relative;
-    z-index: 10;
+    z-index: 2;
   }
 
   .HexagonGroupTemoignage1{
@@ -1585,7 +1565,7 @@
   #connexion{
     grid-column: 4 / 10;
     grid-row: 7;
-    z-index: 25;
+    z-index: 3;
   }
 
   #Temoignage input[type=text], input[type=mail], input[type=tel]{
@@ -1663,7 +1643,7 @@
   #Icons {
     grid-column: 4;
     grid-row: 7;
-    z-index: 24;
+    z-index: 2;
     transform: translate(10px, 45px);
   }
 
@@ -1680,7 +1660,7 @@
     margin-bottom: 100px;
     background-color: #EFEFEF;
     transform: translate(10px, 460px);
-    z-index: 26;
+    z-index: 3;
   }
 
 /*    img.iconupload{
